# relational-schema-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
docs/: DESIGN.md  IMPLEMENTATION-PLAN.md
docs/tool-contract/v1/: README.md  response.schema.json
docs/tool-contract/v1/examples/: response.analyze.json
relational_schema_analyzer/: __init__.py  analyzer.py  baseline.py  cli.py  conceptual.py  defaults.py  dump_reader.py  exports.py  fk_inference.py  heuristics.py  log.py  mapping.py  mcp_server.py  metadata.py  naming.py  owl_export.py  refine.py  schema_diff.py  tool.py  topo_sort.py  typemap.py  types.py
relational_schema_analyzer/connectors/: __init__.py  base.py  csv_source.py  databricks_source.py  dbt_manifest.py  duckdb_source.py  mssql.py  mysql.py  osi.py  postgres.py  snowflake.py
relational_schema_analyzer/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  openrouter_provider.py
tests/: _conformance.py  conftest.py  test_analyzer.py  test_baseline.py  test_cli.py  test_connectors_base.py  test_csv_connector.py  test_databricks_connector.py  test_dbt_manifest_connector.py  test_duckdb_connector.py  test_exports.py  test_fk_inference.py  test_golden_csv.py  test_mcp_server.py  test_mssql_connector.py  test_mysql_connector.py  test_osi_connector.py  test_owl_export.py  test_physical_model.py  test_postgres_connector.py  test_providers.py  test_refine.py  test_schema_diff.py  test_snowflake_connector.py  test_snowflake_fakesnow.py  test_tool.py  test_topo_sort.py  test_types.py
tests/fixtures/: csv_demo_bundle.golden.json
tests/fixtures/dbt/: manifest.json
tests/fixtures/osi/: shop.osi.yaml
tests/integration/: conftest.py  test_live_conformance.py
