[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relational-schema-analyzer"
version = "0.1.0"
description = "Analyze a relational database schema into a conceptual model (OWL-capable) with mapping back to the source schema."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Arthur Keen" }]
keywords = ["relational", "schema", "ontology", "owl", "conceptual-model", "postgres", "mysql", "snowflake"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2",
    "jsonschema>=4",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3"]
mysql = ["pymysql>=1"]
sqlserver = ["pymssql>=2"]
snowflake = ["snowflake-connector-python>=3"]
duckdb = ["duckdb>=1"]
csv = ["polars>=0.20"]
owl = ["rdflib>=7"]
openai = ["openai>=1"]
anthropic = ["anthropic>=0.30"]
openrouter = ["httpx>=0.27"]
mcp = ["mcp>=1"]
dev = ["pytest>=8", "ruff>=0.5", "fakesnow>=0.11", "snowflake-connector-python>=3", "duckdb>=1"]

[project.scripts]
relational-schema-analyzer = "relational_schema_analyzer.cli:main"
relational-schema-analyzer-mcp = "relational_schema_analyzer.mcp_server:main"

[project.urls]
Homepage = "https://github.com/arangodb/relational-schema-analyzer"

[tool.hatch.build.targets.wheel]
packages = ["relational_schema_analyzer"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: live-database tests; require RUN_INTEGRATION=1 and a per-dialect DSN (opt-in, not run by default)",
]
